[project]
name = "sp500-earn-price"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "openpyxl>=3.1.5",
    "pathlib>=1.0.1",
    "polars>=1.19.0",
    "pyarrow>=19.0.0",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
]
