[project]
name = "sp500-earn-price"
version = "2025.07.01"
description = "Compares S&P500 earnings yield to 10-year TIPs rate"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "openpyxl>=3.1.5",
    "pathlib>=1.0.1",
    "polars>=1.19.0",
    "pyarrow>=19.0.0",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
]
